ajout fichier dans css pour footer et ajout footer dans html

--- a/css/full.css
+++ b/css/full.css
@@ -82,9 +82,11 @@ body {
 
 .texte-slide {
 	font-size: 35px;
-	color: white; text-shadow: black 0.2em 0.2em 0.1em
+	/* color: white; text-shadow: black 0.2em 0.2em 0.1em--> */
 
 }
+
+#mapid { height: 180px; }
 
 
 
