--- a/css/footer-distributed-with-address-and-phones.css
+++ b/css/footer-distributed-with-address-and-phones.css
@@ -4,10 +4,18 @@
 	box-sizing: border-box;
 	width: 100%;
 	text-align: left;
-	font: bold 16px sans-serif;
+	
+
+    font-family: 'Source Sans Pro', sans-serif;
+
+    font-family: 'David Libre', serif;
+
+
 
 	padding: 55px 50px;
-	margin-top: 80px;
+	padding-bottom: 40px;
+	margin-top: 50px;
+	margin-bottom: 0;
 }
 
 .footer-distributed .footer-left,
@@ -144,6 +152,10 @@
 	margin-bottom: 5px;
 }
 
+.map-icons {
+	cursor: pointer;
+}
+
 /* If you don't want the footer to be responsive, remove these media queries */
 
 @media (max-height:800px){
@@ -176,3 +188,40 @@ footer{
 	bottom: 0;
 }
 
+ /* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 10px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+    color: black;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
