--- a/css/full.css
+++ b/css/full.css
@@ -33,7 +33,7 @@ body {
 }
 
 .presentation{
-	background-color: rgb(10,10,10);
+	background-color: rgb(83, 63, 52);
 	background-size: 100%;
 	background-repeat: no-repeat;
 	background-position: center;
