--- a/css/full.css
+++ b/css/full.css
@@ -77,11 +77,13 @@ body {
 }
 
 .titre-slide {
-	font-size: 35px;
+	font-size: 30px;
+	font-family: 'Arbutus Slab', serif;
 }
 
 .texte-slide {
-	font-size: 35px;
+	font-size: 30px;
+	font-family: 'Arbutus Slab', serif;
 	/* color: white; text-shadow: black 0.2em 0.2em 0.1em--> */
 
 }
