incorporation des images

--- a/css/full.css
+++ b/css/full.css
@@ -3,64 +3,91 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
+.navbar-fixed-top{
+	background-color: rgb(21,13,15);
+	color: rgb(191,167,157);
+}
 
 body {
     margin-top: 50px; /* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
     min-width: 300px;
+   
 }
 
+.container{
+	margin-left: 0px;
+}
 /* Header Image Background - Change the URL below to your image path (example: ../images/background.jpg) */
 
 .full {
 	background: url('http://thetwopines.com/wp-content/uploads/2016/01/LEATHERPIECES.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
+    -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
     height: 850px;
-    padding-top: 20px;
-
+    padding-top: 10px;  
 }
 
 .title_header{
-	text-align: center;
+	font-family: 'Homemade Apple', cursive; 
+	text-align: center; 
 	color: black;
-	margin-top: 250px;
-	padding: 10px 5px 10px 5px;
-	background-color: rgba(255,255,255,.2);
-	border-radius: 75px 35px;
-	
+	padding-top: 150px;
+	text-shadow: 2px 3px 0.4px rgb(191,167,157);
+
+}
+
+.title_header h1{
+	font-size: 30px;
+}
+
+.title_header p{
+	font-size: 20px;
+	line-height: 50px;
 }
 
 .presentation{
-	background-color: rgb(10,10,10);
+	background: url('http://static.facegfx.com/2012/brown-stripe-texture-background-06-hd-pictures_558734763.jpg');
 	background-size: 100%;
 	background-repeat: no-repeat;
 	background-position: center;
 	text-align: center;
-	color: white;
-	height: 180px;
+	color: rgb(191,167,157);
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .presentation h1{
-	font-size: 33px;
-	padding-top: 20px;
+	font-size: 40px;
+	margin-top: 0px;
+	color: rgb(47,18,2);
+	text-shadow: 2px 3px 0.4px rgb(191,167,157);
 }
 
 .presentation h2{
 	font-size: 25px;
-}
-.presentation p{
+	margin-top: 0px;
 	margin-bottom: 0px;
-	padding-bottom: 20px;
-	font-size: 16px;
-	font-style: italic;
-	margin-left: 300px;
-	margin-right: 300px;
 }
 
-.container-fluid{
-	padding: 55px 0px 55px 0px;
+.presentation p{
+	margin-bottom: 0px;
+	font-size: 16px;
+	font-style: italic;
+}
+
+.shoehorn{
+	margin-top: 200px;
+	margin-bottom: 200px;
+	height: auto;
+}
+
+.bootjack{
+	margin-top: 200px;
+	margin-bottom: 200px;
+	height: auto;
 }
 
 .texte-slide {
@@ -71,9 +98,7 @@ body {
 	font-size: 16px;
 }
 
-#myCarousel {
-	margin-top: 60px;
-}
+
 
 
 
