--- a/css/footer-distributed-with-address-and-phones.css
+++ b/css/footer-distributed-with-address-and-phones.css
@@ -1,20 +1,14 @@
 .footer-distributed{
-	background-color: #292c2f;
+	background-color: rgb(34, 22, 22);
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
 	text-align: left;
-	
-
-    font-family: 'Source Sans Pro', sans-serif;
-
-    font-family: 'David Libre', serif;
-
-
-
+    font-family: 'Great Vibes', cursive;
+    font-family: 'Cinzel', serif;
 	padding: 55px 50px;
 	padding-bottom: 40px;
-	margin-top: 50px;
+	margin-top: 200px;
 	margin-bottom: 0;
 }
 
